fix: :bug: add missing bg-hex variable in dark mode

--- a/public/resources/scss/index.scss
+++ b/public/resources/scss/index.scss
@@ -44,6 +44,7 @@
     --lore_background-hex: #0f0f0fe6;
 
     /* used when --bg can't be used */
+    --bg-hex: #121212;
 
     /* Header Logo */
     --logo: url(https://sky.shiiyu.moe/resources/img/logo_square.svg);
